Fixing more info pop up positions on mobile

--- a/orcid-web/src/main/webapp/static/css/orcid.resp.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.resp.css
@@ -3751,6 +3751,14 @@ ul.personal-inf-display li{
 		margin-top: 65px;
 	}
 	
+	.workspace-header-public{
+		border-top: 0;
+	}
+	
+	.work-more-info-container{
+		left: 0;
+		width: 100%;		
+	}
 }
 
 @media (min-width : 768px) and (max-width : 992px) { /* Tablet */
